--- a/index.html
+++ b/index.html
@@ -1,2 +1,5 @@
-<p>公司名称：上海鹿砂研磨材料有限公司</p>
-<p>联系人：刘经理 13402045966</p>
+<h1>这是1号标题</h1>
+<font size="6">公司名称：上海鹿砂研磨材料有限公司</font>
+
+<h2>这是2号标题</h2>
+<font size="5">联系人：刘经理 13402045966<</font>
