--- a/index.html
+++ b/index.html
@@ -2,4 +2,4 @@
 <font size="6">公司名称：上海鹿砂研磨材料有限公司</font>
 
 <h2></h2>
-<font size="6">联系人：刘经理 13402045966<</font>
+<font size="6">联系人：刘经理 13402045966</font>
