--- a/index.html
+++ b/index.html
@@ -1,6 +1,28 @@
+<html>
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>my first html</title>
+<script>
+        function 显示弹窗() {
+            // 自定义弹窗文本
+            var 确认 = confirm("母情节特供！");
+            if (确认) {
+                // 点击确定后跳转的页面地址
+                window.location.href = "firework.html";
+            }
+        }
+
+        // 在页面加载完成后调用显示弹窗函数
+        window.onload = 显示弹窗;
+    </script>
+</head>
+</head>
+<body>
 <img src="logo.jpg" alt="LuSha_logo" width="284" height="268">
 <h1></h1>
 <font size="6">公司名称：上海鹿砂研磨材料有限公司</font>
-
 <h2></h2>
 <font size="6">联系人：刘经理 13402045966</font>
+</body>
+</html>
