--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>my first html</title>
+<title>LU_SHA_company</title>
 <script>
         function 显示弹窗() {
             // 自定义弹窗文本
