--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="shortcut icon" type="image/png" href="./images/favicon.png" />
+<link rel="icon" type="image/png" href="./images/favicon.png" />
+<link rel="apple-touch-icon-precomposed" href="./images/favicon.png" />
 <title>LU_SHA_company</title>
 <script>
         function 显示弹窗() {
